finished mobile layout

--- a/style.css
+++ b/style.css
@@ -14,25 +14,12 @@ body {
 }
 
 .top {
-    display: flex;
     background-color: #f72210;
-    color: white;
-    padding: 1em 0;
-}
-
-.top .buttons {
-    align-items: flex-end;
-    justify-content: flex-end;
-}
-
-.top button {
-    color: white;
 }
 
 .top button:last-child {
     background-color: white;
     color: #f42210;
-    border-radius: 0;
 }
 
 header {
@@ -130,11 +117,6 @@ figcaption .us,
     flex-direction: row;
 } */
 
-.culture-travel,
-.pandemic-heroes {
-    padding-right: 0;
-}
-
 .pandemic-heroes > h3,
 .culture-travel > h3 {
     font-size: 0.9rem;
@@ -169,10 +151,10 @@ figcaption .us,
     font-size: 0.8rem;
 }
 
-.more-stories figure {
+/* .more-stories figure {
     border-top: 1px solid #dddddd;
     padding: 0.8rem 0;
-}
+} */
 
 /* .more-stories figure img {
     max-width: 16%;
@@ -204,10 +186,10 @@ figcaption .us,
     margin: 0 1em 1em 0;
 } */
 
-.opinion figcaption h4 {
+/* .opinion figcaption h4 {
     font-size: 1rem;
     font-weight: bold;
-}
+} */
 
 .opinion figcaption span {
     font-weight: bold;
@@ -216,9 +198,9 @@ figcaption .us,
     margin-bottom: 0.3em;
 }
 
-.debate {
+/* .debate {
     padding: 1em 0;
-}
+} */
 
 .debate .debator-top {
     border-top: 4px solid #f92859;
@@ -268,35 +250,24 @@ figcaption .us,
     font-weight: bold;
 }
 
-.latest-news figure figcaption {
+/* .latest-news figure figcaption {
     font-weight: bold;
     font-size: 1.1;
-}
+} */
 
 .sign-up {
     background-color: #f4f5f6;
 }
 
-.sign-up div {
-    display: flex;
-    align-items: flex-start;
-}
-
 .sign-up div span {
     background-color: #f72210;
-    font-weight: bolder;
-    color: white;
-    font-size: 1.2rem;
-    padding: 0.1em 0.3em;
-    margin: 0.5em;
-    margin-top: 0.7em;
 }
 
-.sign-up div p {
+/* .sign-up div p {
     font-weight: bold;
     padding: 0.4em 0.2em;
     margin-top: 0.7em;
-}
+} */
 
 .sign-up button {
     background-color: #666666;
@@ -312,14 +283,14 @@ figcaption .us,
     font-size: 0.9rem;
 }
 
-.in-the-magazine > h3,
+/* .in-the-magazine > h3,
 .editors-pick > h3 {
     font-weight: bold;
     font-size: 1.1rem;
     padding-top: 1em;
     padding-bottom: 1em;
     border-bottom: 1px solid #d9d9d9;
-}
+} */
 
 .in-the-magazine > h3 span,
 .editors-pick > h3 span {
@@ -329,7 +300,7 @@ figcaption .us,
     padding: 0.2em 0.3em;
 }
 
-.in-the-magazine figure {
+/* .in-the-magazine figure {
     overflow: hidden;
     display: flex;
     justify-content: flex-start;
@@ -339,79 +310,31 @@ figcaption .us,
     padding: 0;
     flex: 0 0 22.5%;
     max-width: 22.5%;
-}
+} */
 
 .in-the-magazine .issue button {
     background-color: #f4f5f6;
-    font-weight: bold;
-    text-align: center;
-    font-size: 0.9rem;
-    width: 100%;
 }
 
-.in-the-magazine .side img {
+/* .in-the-magazine .side img {
     width: 150%;
     margin-left: -25%;
-}
+} */
 
-.in-the-magazine .side {
+/* .in-the-magazine .side {
     justify-content: space-around;
-}
+} */
 
 .in-the-magazine .topic {
-    font-weight: bold;
     color: #f72210;
-    font-size: 0.9rem;
-    padding: 1em 0;
-    margin-bottom: 0;
 }
 
 .in-the-magazine .topic span {
     background-color: #f72210;
-    color: white;
-    padding: 0.3em 0.6em;
-}
-
-.in-the-magazine .headline {
-    font-weight: bold;
-}
-
-.in-the-magazine .side:last-child img {
-    width: 100%;
-    margin-left: 0;
-}
-
-.in-the-magazine .side:last-child figcaption {
-    font-weight: bold;
-    font-size: 1.1rem;
-    margin-top: -2em;
-}
-
-.editors-pick figure figcaption {
-    position: relative;
-    padding-top: 0.6em;
 }
 
 .editors-pick {
     border-bottom: 1px solid #d9d9d9;
-}
-
-.editors-pick > h3 {
-    margin-bottom: 0.8em;
-    font-size: 1.3rem;
-}
-
-.editors-pick figure img {
-    width: 100%;
-}
-
-.editors-pick .headline {
-    font-weight: bold;
-    font-size: 1.2rem;
-}
-
-.editors-pick figcaption p {
-    font-size: 0.9rem;
 }
 
 .us-headlines,
@@ -432,134 +355,39 @@ figcaption .us,
 .subscribe > h3,
 .newsletter > h3 {
     color: #f42210;
-    font-weight: bold;
-    font-size: 1.4rem;
-    padding-top: 0.6em;
-    width: 100%;
-}
-
-.main-headlines {
-    display: flex;
-    justify-content: space-between;
-}
-
-.main-headlines figure {
-    max-width: 48%;
-}
-
-.main-headlines img {
-    margin-bottom: 1em;
 }
 
 .side-headlines figure {
-    display: flex;
-    justify-content: space-between;
-}
-
-.side-headlines figure img {
-    max-width: 22%;
-}
-
-.side-headlines figcaption {
-    width: 76.5%;
-}
-
-.subscribe-newsletter h3 {
-    font-size: 1rem;
-}
-
-.subscribe,
-.newsletter {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
+    border-color: #dddddd;
 }
 
 .subscribe article {
-    display: flex;
     background-color: #f4f5f6;
-    justify-content: space-between;
-}
-
-.subscribe .img-container {
-    width: 40%;
-    position: relative;
 }
 
 .subscribe .bot-img {
-    margin: 2em;
+    position: relative;
+    top: 8%;
+    left: 22%;
 }
 
 .subscribe .top-img {
     position: absolute;
-    top: 15%;
-    right: 15%;
-}
-
-.subscribe .text-container {
-    width: 59%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.subscribe .text-container h5 {
-    margin-bottom: 1em;
-}
-
-.subscribe .text-container p {
-    margin-bottom: 0;
+    top: 12%;
+    left: 40%;
 }
 
 .subscribe button,
 .newsletter button {
     background-color: #f72210;
-    border-radius: 0;
-    color: white;
-    font-weight: bold;
-}
-
-.subscribe button {
-    max-width: 35%;
-    margin: 1em 0;
 }
 
 .newsletter figure {
     border: 1px solid #f4f5f4;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.newsletter figure img {
-    max-width: 49.5%;
-}
-
-.newsletter figure figcaption {
-    max-width: 49.5%;
-    padding: 1em;
-}
-
-.newsletter figure h5 {
-    font-weight: bold;
 }
 
 footer {
     color: #666666;
-}
-
-footer .list-group {
-    margin: 0.3em 0;
-}
-
-.list-group-item {
-    border-top: none;
-    border-bottom: none;
-    padding: 0 15px;
-}
-
-footer .socials li {
-    margin: 0 0.4em;
 }
 
 footer .socials img {
@@ -568,7 +396,5 @@ footer .socials img {
 }
 
 footer > div {
-    padding: 0.2em 0;
-    margin: 0.5em 0;
     border-bottom: 1px solid #d9d9d9;
 }
